# vlkEngine

./: .gitignore  CMakeLists.txt
shaders/: basic.frag  basic.vert  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert
src/: main.c
src/assets/: asset_manager.c  asset_manager.h  model_loader.c  model_loader.h  texture_loader.c  texture_loader.h
src/core/: assert.c  assert.h  logger.c  logger.h  memory.c  memory.h  thread.c  thread.h  timer.c  timer.h
src/ecs/: components.c  components.h  ecs.c  ecs.h  systems.c  systems.h
src/platform/: linux.c  platform.c  platform.h  windows.c
src/renderer/: buffer.c  buffer.h  command_buffer.c  command_buffer.h  descriptor.c  descriptor.h  framebuffer.c  framebuffer.h  image.c  image.h  pipeline.c  pipeline.h  render_pass.c  render_pass.h  shader.c  shader.h  swapchain.c  swapchain.h  sync.c  sync.h  vulkan_core.c  vulkan_core.h
src/scene/: camera.c  camera.h  node.c  node.h  scene.c  scene.h
tests/: test_ecs.c  test_main.c  test_memory.c
